--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="marcelojpg" alt="foto do marcelojpg">
-            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-imagem" src="x-burguesia.png" alt="foto do x-burguesia.png">
+            <h3 class="estudante-nome">X-Burguesia</h3>
             <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Gabi.jpg" alt="foto da gabi">
-            <h3 class="estudante-nome">Gabriela</h3>
+            <img class="estudante-imagem" src="X-BRAAP.png" alt="foto da X-BRAAP.png">
+            <h3 class="estudante-nome">X-BRAAP</h3>
             <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
