inserção da logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="logo.png" alt="logo do BRAAP LANCHES">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">DISK ENTREGA:</li>
             <li class="cabecalho-lista-item">Cardápio BRAAP</li>
@@ -22,13 +22,13 @@
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Empresa</h2>
             <p class="escola-texto-um">A Empresa é a número 1 em nota de qualidade e velocidade de entrega, somos os campeães de venda da nossa cidade e também do vale do Ivaí</p>
-            <p class="escola-texto-dois">A Lanchonete mais bem avaliada tem uma equip incrível que trabalha duro em caminho para o sucesso!</p>
+            <p class="escola-texto-dois">A Lanchonete mais bem avaliada tem uma equipe incrível que trabalha duro em caminho para o sucesso!</p>
         </div>
-        <img class="escola-imagem" src="lanche.png" alt="imagem que representa um lanche
+        <img class="escola-imagem" src="X-BRAAP.png" alt="imagem que representa um lanche
         ">
     </section>
     <section class="estudante">
-        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <h2 class="LANCHES">nossos <Lanche class="jpg"></Lanche>s </h2>
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
@@ -49,7 +49,7 @@
             <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
             <h3 class="estudante-nome">Lizandra</h3>
             <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="BACON.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <span></span>
