--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="x-burguesia.png" alt="foto do x-burguesia.png">
-            <h3 class="estudante-nome">X-Burguesia</h3>
-            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="X-BRAAP.png" alt="foto da X-BRAAP.png">
@@ -47,8 +43,7 @@
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
-            <h3 class="estudante-nome">Lizandra</h3>
-            <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <h3 class="estudante-nome">X BACON"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="BACON.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
