--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
-            <h3 class="estudante-nome">X BACON"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="BACON.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="XSALADA-imagem" src="x-salada.png" alt=""> class= "lanche"
+            <h3 class="estudante-nome">X SALADA. class="lanchesalada" src="github.png" alt=""></a>
+            <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="" src="BACON.png" alt=""></a>
+            <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png" alt=""></a>
         </div>
         <span></span>
         <span></span>
